[tool.poetry]
name = "swarkn"
version = "0.1.8"
description = "swiss army knife helper functions"
authors = ["John Smith"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9"
frozendict = "*"
cachetools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
